--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,10 @@
           </li>  
           <li class="nav-item">
             <a class="nav-link"  routerLinkActive="active" routerLink="perfil-usuario">Perfil</a>
-          </li>     
+          </li>   
+          <li class="nav-item">
+            <a class="nav-link" routerLink="filter-and-sort" routerLinkActive="active">Filter and Sort</a>
+          </li>  
         </ul>
       </div>
     </div>
